db-deployment/db-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-database
  name: counter-database
spec:
  port:
    targetPort: 5432-tcp
  to:
    kind: Service
    name: counter-database
